skills dots and some other personal page edits

--- a/serena.html
+++ b/serena.html
@@ -14,6 +14,7 @@
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <link href="css/custom.css" rel="stylesheet"/>
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -27,11 +28,11 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#achievements">Achievements</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#achievements">Achievements</a></li>
                 </ul>
             </div>
         </nav>
@@ -58,6 +59,7 @@
                 </div>
             </section>
             <hr class="m-0" />
+
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
@@ -81,6 +83,7 @@
                 </div>
             </section>
             <hr class="m-0" />
+
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
@@ -109,58 +112,33 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Skills-->
-            <section class="resume-section" id="skills">
+
+             <!-- Projects -->
+             <section class="resume-section" id="projects">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
-                    <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
-                    </ul>
-                    <div class="subheading mb-3">Workflow</div>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
-                        </li>
-                    </ul>
+                    <h2 class="mb-5">Projects</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">SEEVEE</h3>
+                            <div class="subheading mb-3">A portfolio project thing</div>
+                            <p>Made some cool portfolios and seevees
+                                </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">March 2020 - Present</span></div>
+                    </div>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">An app maybe</h3>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">November 2020 - Present</span></div>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Interests-->
-            <section class="resume-section" id="interests">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
-                    <p>Apart from software development, I have an avid passion for a vast range of subjects, including all disciplines of the arts – especially music, and building artsy or crafty things. I enjoy staying active and maintaining a healthy lifestyle, going to the gym regularly and playing team sports with friends.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
-                </div>
-            </section>
-            <hr class="m-0" />
-            <!-- Awards-->
-            <section class="resume-section" id="achievements">
+
+             <!-- Achievements-->
+             <section class="resume-section" id="achievements">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Achievements & Certifications</h2>
                     <ul class="fa-ul mb-0">
@@ -212,7 +190,92 @@
                     </ul>
                 </div>
             </section>
+            <hr class="m-0" />
+        
+
+        <!-- Skills-->
+            <section class="resume-section" id="skills">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Skills</h2>
+                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <ul class="list-inline dev-icons">
+                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
+                    </ul>
+            <div class="skills-section">
+                <div class="subheading mb-3">Professional Skills</div>
+                <ul class="list-unstyled mb-0">
+                    <li><span class="skill">English</span>
+                        <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                        <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                        <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                        <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                        <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                    </li>
+                    <li><span class="skill">Cantonese</span>
+                        <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                        <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                        <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                        <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                        <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="skills-section">
+                <div class="subheading mb-3">Personal Skills</div>
+                    <ul class="list-unstyled">
+                        <li>English 
+                            <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                            <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                            <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                            <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                            <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                        </li>
+                        <li>Cantonese
+                            <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                            <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                            <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                            <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                            <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                        </li>
+                    </ul>
+            </div>
+            
+            <div class="skills-section">
+            <div class="subheading mb-3">Languages</div>
+            <ul class="list-unstyled">
+                <li>English 
+                    <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                    <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                    <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                    <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                    <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                </li>
+                <li>Cantonese
+                    <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                    <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                    <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                    <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                    <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                </li>
+            </ul>
         </div>
+        </section>
+        <hr class="m-0" />
+
+            <!-- Interests-->
+            <section class="resume-section" id="interests">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Interests</h2>
+                    <p>Apart from software development, I have an avid passion for a vast range of subjects, including all disciplines of the arts – especially music, and building artsy or crafty things. I enjoy staying active and maintaining a healthy lifestyle, going to the gym regularly and playing team sports with friends.</p>
+                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                </div>
+            </section>
+            <hr class="m-0" />
+     </div>
+
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
