--- a/nicholas.html
+++ b/nicholas.html
@@ -41,7 +41,7 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         Nicholas
-                        <span class="text-primary">Taylor</span>
+                        <span class="text-primary">Yao</span>
                     </h1>
                     <div class="subheading mb-5">
                         Changed Addy · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
