Logo changed the bottom with text

--- a/nick.html
+++ b/nick.html
@@ -19,11 +19,7 @@
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-            <a href="index.html" title="Other Experts">
-                <div class="backicon">
-                    <i class="fas fa-chevron-left fa-4x"></i>
-                </div>
-            </a>
+            
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Clarence Taylor</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span>
@@ -37,6 +33,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="backicon nav-link js-scroll-trigger" href="index.html" title="Other Experts"><i class="fas fa-users fa-2x"></i> Team</a></li>
                 </ul>
             </div>
         </nav>
