--- a/angelo.html
+++ b/angelo.html
@@ -44,7 +44,7 @@
                         <span class="text-primary">Tangonan</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Software Engineering BE(Hons) · Cheyenne Wells, CO 80810 · (31  7) 585-8468 ·
+                        <strong>Software Engineering BE(Hons)</strong> · Cheyenne Wells, CO 80810 · (31  7) 585-8468 ·
                         <a href="mailto:angelo25.coc@gmail.com">angelo25.coc@gmail.com</a>
                     </div>
                     <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
