--- a/nick.html
+++ b/nick.html
@@ -33,7 +33,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
-                    <li class="nav-item"><a class="backicon nav-link js-scroll-trigger" href="index.html" title="Other Experts"><i class="fas fa-users fa-2x"></i> Team</a></li>
+                    <li class="nav-item"><a class="backicon nav-link" href="index.html"><i class="fas fa-users fa-2x"></i> Team</a></li>
                 </ul>
             </div>
         </nav>
