--- a/nick.html
+++ b/nick.html
@@ -33,7 +33,11 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
-                    <li class="nav-item"><a class="backicon nav-link" href="index.html"><i class="fas fa-users fa-2x"></i> Team</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">
+                            <div class="icon-text"><i class="fas fa-users fa-2x backicon"></i> Team</div>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </nav>
