--- a/nick.html
+++ b/nick.html
@@ -34,7 +34,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">
+                        <a class="nav-link" href="index.html" title="Other Experts">
                             <div class="icon-text"><i class="fas fa-users fa-2x backicon"></i> Team</div>
                         </a>
                     </li>
