--- a/nick.html
+++ b/nick.html
@@ -19,7 +19,6 @@
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-            
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Clarence Taylor</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span>
@@ -34,8 +33,8 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html" title="Other Experts">
-                            <div class="icon-text"><i class="fas fa-users fa-2x backicon"></i> Team</div>
+                        <a class="nav-link" href="index.html" title="Other Experts" style="width: 0; height: 0; padding: 0;">
+                            <div class="icon-text"><i class="fas fa-users fa-2x"></i> Team</div>
                         </a>
                     </li>
                 </ul>
