--- a/john.html
+++ b/john.html
@@ -124,13 +124,21 @@
         <section class="resume-section" id="projects">
             <div class="resume-section-content">
                 <h2 class="mb-5">Projects</h2>
-                <a href="#">
+                <a data-toggle="modal" data-target="#exampleModalCenter">
                     <div class="project-item">
+
                         <div class="project-scaffold">
+
                             <img class="project-image" src="assets/img/profile_john.jpg">
                             <div class="project-descript">
                                 <h3 class="mb-0">Chance: An App of Oddities</h3>
-                                <hr />
+                                <hr style="margin: 5px;" />
+                                <ul class="list-inline badge-icons" style="margin-bottom: 0px;">
+                                    <li class="list-inline-item badge-item"><i class="fab fa-html5"></i></li>
+                                    <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+                                    <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
+                                    <li class="list-inline-item"><i class="fab fa-angular"></i></li>
+                                </ul>
                                 Yo this is a test asd s d assd da ds ad s dsa dsads d as d sa sd sda da d ds sda sad
                                 sadsads
                                 sadsadsa da ds ad sa da d sa ds d as d sa ds a d sad s ds ad as sd a ds adasdsdas ddsda
@@ -139,6 +147,7 @@
                                 <div class="flex-shrink-0"><span class="date">Dec 2020 - Feb 2021 & Jan 2020 - Feb
                                         2020</span></div>
                             </div>
+
                         </div>
                     </div>
                 </a>
@@ -322,6 +331,27 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
+
+
+    <!-- Button trigger modal
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+        Launch demo modal
+    </button> -->
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+            <div class="modal-content" style="height: 500px;">
+                <div class="modal-body" >
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/jxMq36286YM" frameborder="0"></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+    <button class="rick">
+        Press me
+    </button>
 </body>
 
 </html>
