--- a/nick.html
+++ b/nick.html
@@ -32,9 +32,9 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html" title="Other Experts" style="width: 0; height: 0; padding: 0;">
-                            <div class="icon-text"><i class="fas fa-users fa-2x"></i> Team</div>
+                    <li>
+                        <a class="nav-link" href="index.html">
+                            <div class="icon-text"><i class="fas fa-users fa-1x"></i> SeeVees</div>
                         </a>
                     </li>
                 </ul>
