--- a/john.html
+++ b/john.html
@@ -256,40 +256,81 @@
         <section class="resume-section" id="skills">
             <div class="resume-section-content">
                 <h2 class="mb-5">Skills</h2>
-                <div class="subheading mb-3">Programming Languages & Tools</div>
+                <div class="skills-section container">
+                    <div class="subheading mb-3 title">Programming Languages and Tools</div>
+                    
+                    <span class="name">
+                        <ul class="list-unstyled mb0">
+                            <li>Dart</li>
+                            <li>Java</li>
+                            <li>Python</li>
+                            <li>MATLAB</li>
+                            <li>Javascript</li>
+                            <li>HTML & CSS</li>
+                            <li>Unity</li>
+                            <li>Flutter</li>
+                            <li>C</li>
+                            <li>Vue.js</li>
+                        </ul>
+                    </span>
+                    <div class="dots">
+                        <ul class="list-unstyled">
+                            <li>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                            </li>
+                            <li>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                            </li>
+                        </ul>
+                    </div>
+                    
+                </div>
                 <ul class="list-inline dev-icons">
-                    <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-java"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-python"></i></li>
                     <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-html5"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-css3"></i></li>
+                    <li class="list-inline-item"><img src="https://img.icons8.com/color/48/000000/dart.png"/></li>
+                    <li class="list-inline-item"><img src="https://img.icons8.com/color/48/000000/flutter.png"/></i></li>
+                    <li class="list-inline-item"><img src="https://img.icons8.com/ios-filled/50/000000/unity.png"/></i></li>
                 </ul>
-                <div class="subheading mb-3">Workflow</div>
-                <ul class="fa-ul mb-0">
-                    <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
-                        Mobile-First, Responsive Design
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
-                        Cross Browser Testing & Debugging
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
-                        Cross Functional Teams
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
-                        Agile Development & Scrum
-                    </li>
-                </ul>
+
+                <div class="skills-section container">
+                    <div class="subheading mb-3 title">Languages</div>
+                    <span class="name">
+                        <ul class="list-unstyled mb0">
+                            <li>English</li>
+                            <li>Mandarin</li>
+                        </ul>
+                    </span>
+                    <div class="dots">
+                        <ul class="list-unstyled">
+                            <li>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                            </li>
+                            <li>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </section>
         <hr class="m-0" />
@@ -312,6 +353,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
+    <a href="https://icons8.com/icon/7AFcZ2zirX6Y/dart">Dart icon by Icons8</a>
+    <a href="https://icons8.com/icon/7I3BjCqe9rjG/flutter">Flutter icon by Icons8</a>
+    <a href="https://icons8.com/icon/39848/unity">Unity icon by Icons8</a>
 </body>
 
 </html>
