--- a/jack.html
+++ b/jack.html
@@ -1,1 +1,221 @@
-hi
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="Jack Gong" />
+        <title>Resume - Start Bootstrap Theme</title>
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/styles.css" rel="stylesheet" />
+    </head>
+    <body id="page-top">
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">
+                <span class="d-block d-lg-none">Jack Gong</span>
+                <span class="d-none d-lg-block"><img class=" img-profile rounded-circle mx-auto mb-2"
+                        src="assets/img/jack.jpg" alt="" /></span>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#volunteering">Volunteering</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                </ul>
+            </div>
+        </nav>
+        <!-- Page Content-->
+        <div class="container-fluid p-0">
+            <!-- About-->
+            <section class="resume-section" id="about">
+                <div class="resume-section-content">
+                    <h1 class="mb-0">
+                        Jack
+                        <span class="text-primary">Gong</span>
+                    </h1>
+                    <div class="subheading mb-5">
+                        SOFTWARE ENGINEER BE(HONS) ·
+                        <a href="mailto:name@email.com">jackgong48@gmail.com</a>
+                    </div>
+                    <p class="lead mb-5">Looking to challenge myself in all aspects of technology; present and the future.</p>
+                    <div class="social-icons">
+                        <a class="social-icon" href="https://www.linkedin.com/in/jack-gong/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
+                        <!-- <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a> -->
+                        <!-- <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a> -->
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Experience-->
+            <section class="resume-section" id="experience">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Experience</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Produce Assistant</h3>
+                            <div class="subheading mb-3">Countdown</div>
+                            <p>
+                              Handling fruits and vegetables and interacting with customers are the main responsibilities of this position. This role requires an eye for presenting attractive displays and a commitment to meeting food and safety standards. Often times, customers will ask for help and it is our responsibility to be patient and good communicators so that they can have a positive experience and be happy to come back again.
+                            </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">December 2019 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">AUT Shadow a Leader Day</h3>
+                            <div class="subheading mb-3">The Web Co, Patrick Howard</div>
+                            <p>
+                              The aim of Shadow a Leader is to give Auckland secondary school students and AUT Faculty of Business, Economics and Law students the opportunity to follow a business leader and to understand what it takes to succeed in the leader’s field of endeavour.  My leader owns a web development agency, based in Newmarket.
+                            </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">April 2021 - Present</span></div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Volunteering-->
+            <section class="resume-section" id="volunteering">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Volunteering</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Rogobals Auckland</h3>
+                            <div class="subheading mb-3">Volunteering</div>
+                            <p>
+                              Robogals Auckland is a student-run club based at The University of Auckland. This club aims to educate kids and young adults on the STEM field.  One of the workshops I volunteered for was centred on teaching communication using morse code and delivering messages to the other kids with Lego Mindstorm robots.
+                            </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">April 2021 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">YTech NZ</h3>
+                            <div class="subheading mb-3">Second-year Committee member</div>
+                            <p>
+                              YTech is a non-profit organisation run by youth for youth.  As a committee member, I was able to experience different aspects of running an organisation e.g marketing, registrations, keeping minutes etc.  Previous events include <a href="#">‘YTech: Walking on Mars’</a> and ‘AI: The World of Tomorrow’.  The purpose of this organisation is to introduce STEM to young students so that they may have a better idea of what STEM is and if it is something they should consider looking into more.
+                            </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2019 - Present</span></div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Education-->
+            <section class="resume-section" id="education">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Education</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">The University of Auckland</h3>
+                            <div class="subheading mb-3">Bachelor of Engineering (Honours)</div>
+                            <p>GPA: 8.0</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">March 2020 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Western Springs College</h3>
+                            <div class="subheading mb-3">NATIONAL CERTIFICATE OF EDUCATIONAL ACHIEVEMENT</div>
+                            <p>Clubs and leadership: International students leader, Tennis, Basketball</p>
+                            <p>Excellence Endorsed at levels 1, 2 and 3</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2015 - November 2019</span></div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Skills-->
+            <!-- Skills-->
+            <section class="resume-section" id="skills">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Skills</h2>
+                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <ul class="list-inline dev-icons">
+                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+                    </ul>
+                    <div class="subheading mb-3">Workflow</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Mobile-First, Responsive Design
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Cross Browser Testing & Debugging
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Cross Functional Teams
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Agile Development & Scrum
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Awards-->
+            <section class="resume-section" id="awards">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Achievements</h2>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
+                            <div><em><b>University of Auckland, Faculty of Engineering</b></em></div>
+                            Deans Honour List (top 5% of cohort) <br />
+                        </li>
+                        <br/>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
+                            <div><em><b>Startup company of the year</b></em></div>
+                            Young Enterprise Scheme (2017)<br />
+                        </li>
+                        <br/>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
+                            <div><em><b>ABRSM Level 8</b></em></div>
+                            Attained with Achievement<br />
+                        </li>
+                        <br />
+                        <li>
+                            <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
+                            <div><em><b>NCSS Challenge - Python (Intermediate)</b></em></div>
+                            Perfect Score (2016)<br />
+                        </li>
+                    </ul>
+                </div>
+            </section>
+        </div>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Third party plugin JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+    </body>
+</html>
