--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <a href="serena">SERENA</a>
         <a href="nick">NICK</a>
         <a href="nicholas">NICHOLAS</a>
-        <a href="jack">JACK</a>
+        <a href="jack">JACK Gong</a>
         <a href="angelo">ANGELO</a>
     </body>
 </html>
