--- a/jack.html
+++ b/jack.html
@@ -21,7 +21,7 @@
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Jack Gong</span>
                 <span class="d-none d-lg-block"><img class=" img-profile rounded-circle mx-auto mb-2"
-                        src="assets/img/jack.jpg" alt="" /></span>
+                        src="assets/img/profile_jack.jpg" alt="" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
