--- a/jack.html
+++ b/jack.html
@@ -48,7 +48,7 @@
                         SOFTWARE ENGINEER BE(HONS) ·
                         <a href="mailto:name@email.com">jackgong48@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">Looking to challenge myself in all aspects of technology; present and the future.</p>
+                    <p class="lead mb-5">Looking to challenge myself in all aspects of technology; present and future.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/jack-gong/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
