modified skills section

--- a/john.html
+++ b/john.html
@@ -40,7 +40,6 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Achievements</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#volunteering">Volunteering</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
             </ul>
         </div>
     </nav>
@@ -261,16 +260,15 @@
                     
                     <span class="name">
                         <ul class="list-unstyled mb0">
-                            <li>Dart</li>
-                            <li>Java</li>
+                            <li>Dart & Flutter</li>
                             <li>Python</li>
-                            <li>MATLAB</li>
-                            <li>Javascript</li>
                             <li>HTML & CSS</li>
-                            <li>Unity</li>
-                            <li>Flutter</li>
+                            <li>Javascript</li>
+                            <li>Java</li>
                             <li>C</li>
-                            <li>Vue.js</li>
+                            <li>MATLAB & R</li> 
+                            <li>Blender</li>
+                            <li>Unity</li>
                         </ul>
                     </span>
                     <div class="dots">
@@ -280,12 +278,61 @@
                                 <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
                                 <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
                                 <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
-                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
                             </li>
                             <li>
                                 <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
                                 <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
                                 <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                            </li>
+                            <li>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                            </li>
+                            <li>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                            </li>
+                            <li>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                            </li>
+                            <li>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                            </li>
+                            <li>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                            </li>
+                            <li>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                            </li>
+                            <li>
+                                <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                                <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
                                 <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
                                 <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
                             </li>
@@ -333,18 +380,6 @@
                 </div>
             </div>
         </section>
-        <hr class="m-0" />
-        <!-- Interests-->
-        <section class="resume-section" id="interests">
-            <div class="resume-section-content">
-                <h2 class="mb-5">Interests</h2>
-                <p>I have no interests cos im a nerdddddddddd</p>
-                <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television
-                    shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest
-                    technology advancements in the front-end web development world.</p>
-            </div>
-        </section>
-
     </div>
     <!-- Bootstrap core JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -353,6 +388,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
+    <div><b>Icons were sourced from:</b></div>
     <a href="https://icons8.com/icon/7AFcZ2zirX6Y/dart">Dart icon by Icons8</a>
     <a href="https://icons8.com/icon/7I3BjCqe9rjG/flutter">Flutter icon by Icons8</a>
     <a href="https://icons8.com/icon/39848/unity">Unity icon by Icons8</a>
