--- a/john.html
+++ b/john.html
@@ -451,14 +451,18 @@
                     
                 </div>
                 <ul class="list-inline dev-icons">
-                    <li class="list-inline-item"><i class="fab fa-java"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-python"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-css3"></i></li>
-                    <li class="list-inline-item"><img src="https://img.icons8.com/color/48/000000/dart.png"/></li>
-                    <li class="list-inline-item"><img src="https://img.icons8.com/color/48/000000/flutter.png"/></i></li>
-                    <li class="list-inline-item"><img src="https://img.icons8.com/ios-filled/50/000000/unity.png"/></i></li>
+                    <li class="list-inline-item skills-icons"><img src="https://img.icons8.com/color/48/000000/dart.png"/></li>
+                    <li class="list-inline-item skills-icons"><img src="https://img.icons8.com/color/48/000000/flutter.png"/></li>
+                    <li class="list-inline-item skills-icons"><img src="https://img.icons8.com/color/48/000000/python.png"/></li>
+                    <li class="list-inline-item skills-icons"><img src="https://img.icons8.com/color/48/000000/html-5--v1.png"/></li>
+                    <li class="list-inline-item skills-icons"><img src="https://img.icons8.com/color/48/000000/css3.png"/></li>
+                    <li class="list-inline-item skills-icons"><img src="https://img.icons8.com/color/48/000000/javascript.png"/></li>
+                    <li class="list-inline-item skills-icons"><img src="https://img.icons8.com/color/48/000000/java-coffee-cup-logo.png"/></li>
+                    <li class="list-inline-item skills-icons"><img src="https://img.icons8.com/color/48/000000/c-programming.png"/></li>
+                    <li class="list-inline-item skills-icons"><img src="https://img.icons8.com/fluent/48/000000/matlab.png"/></li>
+                    <li class="list-inline-item skills-icons"><img src="https://img.icons8.com/windows/32/000000/r-project.png"/></li>
+                    <li class="list-inline-item skills-icons"><img src="https://img.icons8.com/color/48/000000/blender-3d.png"/></li>                    
+                    <li class="list-inline-item skills-icons"><img src="https://img.icons8.com/ios-filled/50/000000/unity.png"/></i></li>
                 </ul>
 
                 <div class="skills-section container">
@@ -514,9 +518,18 @@
         </div>
     </div>
     <div><b>Icons were sourced from:</b></div>
-    <a href="https://icons8.com/icon/7AFcZ2zirX6Y/dart">Dart icon by Icons8</a>
-    <a href="https://icons8.com/icon/7I3BjCqe9rjG/flutter">Flutter icon by Icons8</a>
-    <a href="https://icons8.com/icon/39848/unity">Unity icon by Icons8</a>
+    <a target="_blank"  href="https://icons8.com/icon/7AFcZ2zirX6Y/dart">Dart icon by Icons8</a>
+    <a target="_blank"  href="https://icons8.com/icon/7I3BjCqe9rjG/flutter">Flutter icon by Icons8</a>
+    <a target="_blank"  href="https://icons8.com/icon/39848/unity">Unity icon by Icons8</a>
+    <a target="_blank"  href="https://icons8.com/icon/13441/python">Python icon by Icons8</a>
+    <a target="_blank"  href="https://icons8.com/icon/20909/html-5">Html 5 icon by Icons8</a>
+    <a target="_blank"  href="https://icons8.com/icon/21278/css3">CSS3 icon by Icons8</a>
+    <a target="_blank"  href="https://icons8.com/icon/108784/javascript">JavaScript icon by Icons8</a>
+    <a target="_blank"  href="https://icons8.com/icon/13679/java">Java icon by Icons8</a>
+    <a target="_blank"  href="https://icons8.com/icon/40670/c-programming">C Programming icon by Icons8</a>
+    <a target="_blank"  href="https://icons8.com/icon/r5Y16PcDkoWI/matlab">MATLAB icon by Icons8</a>
+    <a target="_blank"  href="https://icons8.com/icon/xJd_7yBGvl5J/r-project">R Project icon by Icons8</a>
+    <a target="_blank"  href="https://icons8.com/icon/65231/blender-3d">Blender 3D icon by Icons8</a>
 </body>
 
 </html>
