--- a/serena.html
+++ b/serena.html
@@ -144,7 +144,7 @@
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">An app maybe</h3>
+                            <h3 class="mb-0">An app</h3>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">January 2021 - Present</span></div>
                     </div>
