temp landing page added + some updated for john.html

--- a/john.html
+++ b/john.html
@@ -470,19 +470,21 @@
             </div>
         </div>
     </div>
-    <div><b>Icons were sourced from:</b></div>
-    <a target="_blank" href="https://icons8.com/icon/7AFcZ2zirX6Y/dart">Dart icon by Icons8</a>
-    <a target="_blank" href="https://icons8.com/icon/7I3BjCqe9rjG/flutter">Flutter icon by Icons8</a>
-    <a target="_blank" href="https://icons8.com/icon/39848/unity">Unity icon by Icons8</a>
-    <a target="_blank" href="https://icons8.com/icon/13441/python">Python icon by Icons8</a>
-    <a target="_blank" href="https://icons8.com/icon/20909/html-5">Html 5 icon by Icons8</a>
-    <a target="_blank" href="https://icons8.com/icon/21278/css3">CSS3 icon by Icons8</a>
-    <a target="_blank" href="https://icons8.com/icon/108784/javascript">JavaScript icon by Icons8</a>
-    <a target="_blank" href="https://icons8.com/icon/13679/java">Java icon by Icons8</a>
-    <a target="_blank" href="https://icons8.com/icon/40670/c-programming">C Programming icon by Icons8</a>
-    <a target="_blank" href="https://icons8.com/icon/r5Y16PcDkoWI/matlab">MATLAB icon by Icons8</a>
-    <a target="_blank" href="https://icons8.com/icon/xJd_7yBGvl5J/r-project">R Project icon by Icons8</a>
-    <a target="_blank" href="https://icons8.com/icon/65231/blender-3d">Blender 3D icon by Icons8</a>
+    <div style="font-size: 10px;">
+        <div><b>Icons were sourced from:</b></div>
+        <a target="_blank" href="https://icons8.com/icon/7AFcZ2zirX6Y/dart">Dart icon by Icons8</a>
+        <a target="_blank" href="https://icons8.com/icon/7I3BjCqe9rjG/flutter">Flutter icon by Icons8</a>
+        <a target="_blank" href="https://icons8.com/icon/39848/unity">Unity icon by Icons8</a>
+        <a target="_blank" href="https://icons8.com/icon/13441/python">Python icon by Icons8</a>
+        <a target="_blank" href="https://icons8.com/icon/20909/html-5">Html 5 icon by Icons8</a>
+        <a target="_blank" href="https://icons8.com/icon/21278/css3">CSS3 icon by Icons8</a>
+        <a target="_blank" href="https://icons8.com/icon/108784/javascript">JavaScript icon by Icons8</a>
+        <a target="_blank" href="https://icons8.com/icon/13679/java">Java icon by Icons8</a>
+        <a target="_blank" href="https://icons8.com/icon/40670/c-programming">C Programming icon by Icons8</a>
+        <a target="_blank" href="https://icons8.com/icon/r5Y16PcDkoWI/matlab">MATLAB icon by Icons8</a>
+        <a target="_blank" href="https://icons8.com/icon/xJd_7yBGvl5J/r-project">R Project icon by Icons8</a>
+        <a target="_blank" href="https://icons8.com/icon/65231/blender-3d">Blender 3D icon by Icons8</a>
+    </div>
 </body>
 
 </html>
