--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">    
     <body id="page-top">
-        <a href="john">JOHN</a>
-        <a href="serena">SERENA</a>
-        <a href="nick">NICK</a>
-        <a href="nicholas">NICHOLAS</a>
-        <a href="jack">JACK</a>
-        <a href="angelo">ANGELO</a>
+        <h2 style="color: #bd5d38;">Hi there!</h2>
+        <p><b>seevee.co.nz</b> is a website created and hosted by six Be(Hons) students, studying at the University of Auckland (class of 2023). <br> <br>
+        The landing page is still in development but personal profiles are accessible using the links below. This web platform acts as an avenue for us<br>
+        to display our web portfolios (for employers, colleagues, friends, and whanau). In addition, it provides a means to showcase various <br>
+         projects made with web technologies.
+        <br>
+        <br>
+        For any enquiries about this website, please contact any one of us via the details provided in our profiles.
+        </p>
+
+        <h4 style="color: #bd5d38;">Portfolios:</h4>
+        <a href="angelo">Angelo Tangonan</a>
+        <a href="jack">Jack Gong</a>
+        <a href="john">John Chen</a>
+        <a href="serena">Serena Lau</a>
+        <a href="nicholas">Nicholas Yao</a>
+        <a href="nick">Nick Huang</a>
     </body>
 </html>
