minor change made

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">    
     <body id="page-top">
         <h2 style="color: #bd5d38;">Hi there!</h2>
-        <p><b>seevee.co.nz</b> is a website created and hosted by six Be(Hons) students, studying at the University of Auckland (class of 2023). <br> <br>
+        <p><b>seevee.co.nz</b> is a website created and hosted by six BE(Hons) students, studying at the University of Auckland (class of 2023). <br> <br>
         The landing page is still in development but personal profiles are accessible using the links below. This web platform acts as an avenue for us<br>
         to display our web portfolios (for employers, colleagues, friends, and whanau). In addition, it provides a means to showcase various <br>
          projects made with web technologies.
