--- a/john.html
+++ b/john.html
@@ -181,6 +181,8 @@
                         </div>
                     </a>
                 </div>
+
+                
             </div>
     </div>
     </section>
@@ -197,6 +199,8 @@
                     <div><em><b>Part 1 Engineering</b></em></div>
                     Deans Honour List (top 5% of cohort) <br />
                     First in Course | ENGGEN 115: Principles of Engineering Design <br />
+                    First in Course | ELECTENG 101: Electrical and Digital Systems <br />
+                    First in Course | CHEMMAT 121: Materials Science <br />
                     First in CAD Design for ENGGEN 115 – Captain Pi’s Soarin’ Roger <a href="#">(see
                         project)</a><br />
                 </li>
@@ -225,7 +229,7 @@
                     <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
                     <div><em><b>International Mathematics Modelling Competition</b></em></div>
                     Member of School Team | 1st Nationals | Top 5 Internationally<br />
-                    Attended Cermony for Meritorious Teams | @ Hong Kong <a href="#">(see more)</a> <br />
+                    Attended Cermony for Meritorious Teams | @ Hong Kong <a href="https://www.youtube.com/watch?v=1qxc8FXQNig" target="_blank">(see more)</a> <br />
                 </li>
                 <li>
                     <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
